fixed currency icon alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -157,14 +157,14 @@ section {
     );
     tr { background: none; }
     td {
-      padding: 15px 10px;
+      padding: 15px 14px;
       font-size: 1.2em;
       font-weight: 400;
       text-align: left;
       border-bottom: 1px solid $light-gray;
 
       &.currency-type {
-        width: 60px;
+        width: 68px;
       }
       &.value {
         text-align: right;
